--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "rotion",
+  "productName": "Rotion",
   "version": "1.0.0",
   "description": "An Electron application with React and TypeScript",
   "main": "./out/main/index.js",
@@ -22,7 +23,10 @@
   },
   "dependencies": {
     "@electron-toolkit/preload": "^1.0.2",
-    "@electron-toolkit/utils": "^1.0.2"
+    "@electron-toolkit/utils": "^1.0.2",
+    "clsx": "^1.2.1",
+    "cmdk": "^0.1.20",
+    "phosphor-react": "^1.4.1"
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
