--- a/package.json
+++ b/package.json
@@ -24,14 +24,23 @@
   "dependencies": {
     "@electron-toolkit/preload": "^1.0.2",
     "@electron-toolkit/utils": "^1.0.2",
+    "@tiptap/extension-document": "^2.0.0-beta.204",
+    "@tiptap/extension-highlight": "^2.0.0-beta.204",
+    "@tiptap/extension-placeholder": "^2.0.0-beta.204",
+    "@tiptap/extension-typography": "^2.0.0-beta.204",
+    "@tiptap/react": "^2.0.0-beta.204",
+    "@tiptap/starter-kit": "^2.0.0-beta.204",
     "clsx": "^1.2.1",
     "cmdk": "^0.1.20",
-    "phosphor-react": "^1.4.1"
+    "electron-router-dom": "^1.0.5",
+    "phosphor-react": "^1.4.1",
+    "react-router-dom": "^6.4.3"
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@electron/notarize": "^1.2.3",
     "@rocketseat/eslint-config": "^1.1.3",
+    "@tailwindcss/typography": "^0.5.8",
     "@types/node": "16.11.22",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
